--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,6 @@
 </head>
 <body onload="hideLoader()">
 
-
     <!-- Fixed Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="index.html ">Reliable HVAC Parts</a>
@@ -34,7 +33,7 @@
         </ul>
       </div>
     </nav>
-  
+
   <!-- Loader -->
   <div id="loader" class="loader"></div>
 
@@ -57,7 +56,8 @@
             <h5 class="card-title">Digital Programmable Thermostat</h5>
             <p class="card-text">A programmable thermostat to save energy and ensure your HVAC system runs efficiently. Ideal for any home or office setup.</p>
             <p class="card-description">Made with durable, high-quality materials for long-lasting performance.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Digital Programmable Thermostat', 99.99)">Add to Cart</a>
+            <p class="card-price">$540</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Digital Programmable Thermostat', 540)">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -70,6 +70,7 @@
             <h5 class="card-title">MERV 8 Air Filter</h5>
             <p class="card-text">Ensure clean airflow and optimal performance with this MERV 8 air filter. Perfect for most HVAC systems.</p>
             <p class="card-description">Engineered to provide superior filtration for better air quality.</p>
+            <p class="card-price">$250</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('MERV 8 Air Filter', 19.99)">Add to Cart</a>
           </div>
         </div>
@@ -83,7 +84,8 @@
             <h5 class="card-title">Condenser Fan Motor</h5>
             <p class="card-text">A high-performance motor designed to keep your HVAC system running smoothly and efficiently in all weather conditions.</p>
             <p class="card-description">Built for long-lasting durability and efficient cooling performance.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Condenser Fan Motor', 149.99)">Add to Cart</a>
+            <p class="card-price">$350</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Condenser Fan Motor', 300)">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -96,7 +98,8 @@
             <h5 class="card-title">High-Efficiency Air Conditioner</h5>
             <p class="card-text">Keep your space cool with this energy-efficient air conditioner designed for all seasons.</p>
             <p class="card-description">Provides exceptional cooling performance while minimizing energy consumption.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('High-Efficiency Air Conditioner', 499.99)">Add to Cart</a>
+            <p class="card-price">$3,800</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('High-Efficiency Air Conditioner', 2500)">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -109,7 +112,8 @@
             <h5 class="card-title">Heating Element</h5>
             <p class="card-text">Replace your HVAC heating element with this high-performance part for optimal heating efficiency.</p>
             <p class="card-description">Designed to provide consistent and reliable heat during colder months.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Heating Element', 79.99)">Add to Cart</a>
+            <p class="card-price">$60</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Heating Element', 45)">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -122,7 +126,8 @@
             <h5 class="card-title">Heavy-Duty Duct Tape</h5>
             <p class="card-text">Ideal for sealing ductwork, this heavy-duty duct tape ensures a tight seal in all conditions.</p>
             <p class="card-description">Strong, durable adhesive that holds up under tough conditions.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Heavy-Duty Duct Tape', 6.99)">Add to Cart</a>
+            <p class="card-price">$15</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Heavy-Duty Duct Tape', 10)">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -135,7 +140,8 @@
             <h5 class="card-title">Air Purifier Filter</h5>
             <p class="card-text">Keep your air clean and your HVAC system running smoothly with this air purifier filter.</p>
             <p class="card-description">Filters harmful particles to maintain healthier indoor air quality.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Air Purifier Filter', 49.99)">Add to Cart</a>
+            <p class="card-price">$80</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Air Purifier Filter', 60)">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -148,7 +154,8 @@
             <h5 class="card-title">HVAC Insulation Kit</h5>
             <p class="card-text">Ensure your HVAC system operates efficiently with this high-quality insulation kit for ducts and pipes.</p>
             <p class="card-description">Provides superior insulation for better performance and energy savings.</p>
-            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('HVAC Insulation Kit', 89.99)">Add to Cart</a>
+            <p class="card-price">$150</p>
+            <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('HVAC Insulation Kit', 100)">Add to Cart</a>
           </div>
         </div>
       </div>
